--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Language Learner</title>
+    <title>Language Learning App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="app">
-        <h1>Welcome to the learning app</h1>
-        <div id="conversation">
-            <p id="prompt">Hello! How are you?</p>
-            <input type="text" id="response" placeholder="Type your response">
-            <button id="submit">Submit</button>
+        <h1>Conversational Language Learning</h1>
+        <div id="lesson">
+            <h2>Lesson: <span id="context-name">Simple Greetings</span></h2>
+            <p id="phrase">Phrase: <span id="english-text">Hello</span></p>
+            <p id="hint">Hint: <span id="hint-text">A common greeting</span></p>
+            <p id="pronunciation">Pronunciation: <span id="pronunciation-text">oh-lah</span></p>
+            <input type="text" id="user-input" placeholder="Type your response here...">
+            <button id="check-answer">Check Answer</button>
             <p id="feedback"></p>
         </div>
     </div>
     <script src="app.js"></script>
-    
 </body>
 </html>
