--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="app">
     <!-- Level Navigation -->
-    <section id="level-navigation" class="screen">
+    <section id="level-navigation" class="screen active">
       <h1>Select a Level</h1>
       <div id="levels">
         <!-- Levels will be generated here by JavaScript -->
