--- a/index.html
+++ b/index.html
@@ -16,30 +16,33 @@
       </div>
     </section>
 
-    <!-- Introduction Stage -->
+        <!-- Introduction Stage -->
     <section id="introduction-stage" class="screen">
-      <h1>Learn New Words</h1>
-      <div id="word-list">
+        <h1>New Word</h1>
+        <div id="word-list">
         <!-- Words/phrases will be displayed here -->
-      </div>
-      <button onclick="nextStage('usage-stage')">Next: Practice Usage</button>
+        </div>
+        <button onclick="nextStage()">Next: Practice</button>
     </section>
-
-    <!-- Usage Practice Stage -->
-    <section id="usage-stage" class="screen">
-      <h1>Practice Usage</h1>
-      <p id="usage-example"></p>
-      <button onclick="nextStage('quiz-stage')">Next: Quiz</button>
+    
+    <!-- Practice Stage -->
+    <section id="practice-stage" class="screen">
+        <h1>Practice</h1>
+        <div id="practice-sentences">
+        <!-- Practice sentences will be injected here by JavaScript -->
+        </div>
+        <button onclick="nextStage()">Next: Quiz</button>
     </section>
-
+    
     <!-- Quiz Stage -->
     <section id="quiz-stage" class="screen">
-      <h1>Quiz</h1>
-      <div id="quiz-options">
+        <h1>Quiz</h1>
+        <div id="quiz-options">
         <!-- Quiz options will be injected here by JavaScript -->
-      </div>
-      <button onclick="nextStage('conversation-stage')">Next: Conversation Practice</button>
+        </div>
+        <button onclick="nextStage()">Next: Conversation Practice</button>
     </section>
+  
 
     <!-- Conversation Stage -->
     <section id="conversation-stage" class="screen">
