created conversation page 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="app">
     <!-- Level Navigation -->
     <section id="level-navigation" class="screen active">
-      <h1>Select a Level</h1>
+      <h1 class="page-h1" >Select a Level</h1>
       <div id="levels">
         <!-- Levels will be generated here by JavaScript -->
       </div>
@@ -18,7 +18,7 @@
 
         <!-- Introduction Stage -->
     <section id="introduction-stage" class="screen">
-        <h1 class="page-h1">New Word</h1>
+        <h1 class="page-h1" >New Word</h1>
         <div id="word-list">
         <!-- Words/phrases will be displayed here -->
         </div>
